@@ -1,24 +1,26 @@
 package idawi.demo;
 
-import java.io.IOException;
 import java.util.Random;
-import java.util.concurrent.TimeUnit;
 
 import idawi.Component;
 import idawi.Idawi;
+import idawi.messaging.Message;
 import idawi.routing.BlindBroadcasting;
+import idawi.routing.ComponentMatcher;
+import idawi.routing.FloodingWithSelfPruning;
 import idawi.service.PingService;
+import idawi.service.PingService.ping;
 import idawi.service.local_view.LocalViewService;
 import idawi.service.local_view.Network;
 import idawi.transport.SharedMemoryTransport;
 import idawi.transport.Topologies;
 import idawi.transport.TransportService;
-import jdotgen.GraphvizDriver;
-import toools.io.file.RegularFile;
 
 public class ManyComponents {
-	public static void main(String[] args) throws IOException, InterruptedException {
+	public static void main(String[] args) throws Throwable {
 		System.out.println("start");
+		Idawi.agenda.start();
+		Idawi.prng = new Random(0);
 
 		// creates components
 		var components = Component.createNComponent(100);
@@ -26,33 +28,29 @@ public class ManyComponents {
 		for (var c : components) {
 			new SharedMemoryTransport(c);
 			new LocalViewService(c);
-			new BlindBroadcasting(c);
+			c.need(FloodingWithSelfPruning.class);
+			c.need(PingService.class);
 		}
 
 		// connect them in a random tree
-		Topologies.chains(components, 3, new Random(), (a, b) -> SharedMemoryTransport.class, components);
+		Topologies.chains(components, 3, Idawi.prng, (a, b) -> SharedMemoryTransport.class, components);
 
-//		System.out.println(Topologies.toDot(components));
-		var pdfFile = RegularFile.createTempFile("", ".pdf");
-		GraphvizDriver.path = "/usr/local/bin/";
-//		pdfFile.setContent(Topologies.toDot(components).toPDF());
-		pdfFile.open();
-
-		var first = components.get(0);
-		var last = components.get(components.size() - 1);
+		var first = components.getFirst();
+		var last = components.getLast();
 		Network.markLinkActive(last, first, SharedMemoryTransport.class, false, components);
 
-		var q = first.service(PingService.class).ping(components.get(components.size() / 2));
-		var pong = q.poll_sync();
+//		Idawi.directory = new Directory("$HOME/test/idawi");
+//		GraphvizDriver.path = "/usr/local/bin/";
+//		first.localView().g.plot().open();
+		var to = ComponentMatcher.unicast(components.get(components.size() / 2));
+		var q = first.need(BlindBroadcasting.class).exec(to, PingService.class, ping.class, null, "ping",
+				true).returnQ;
+		var pong = q.poll_sync().throwIfError();
 		System.out.println("pong= " + pong);
+		System.out.println("ping travelled through: " + ((Message) pong.content).route.components());
 
-		long nbMessages = 0;
-
-		for (var c : components) {
-			nbMessages += c.service(TransportService.class).nbMsgReceived;
-		}
-
-		Idawi.agenda.threadPool.awaitTermination(1, TimeUnit.SECONDS);
-		System.out.println("nbMessages: " + nbMessages);
+		Idawi.agenda.stopNow(null);
+		System.out.println("nbReceptions: "
+				+ components.stream().mapToLong(c -> c.need(TransportService.class).nbMsgReceived).sum());
 	}
 }
